tests/ui/typeck/wide_ptr_transmute.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/wide_ptr_transmute.rs:2:19
   |
LL | struct Vtable(dyn Cap);
   |                   ^^^ expected named lifetime parameter
   |
   = note: for more information on higher-ranked polymorphism, visit https://doc.rust-lang.org/nomicon/hrtb.html
help: consider making the bound lifetime-generic with a new `'a` lifetime
   |
LL | struct Vtable(dyn for<'a> Cap<'a>);
   |                   +++++++    ++++
help: consider introducing a named lifetime parameter
   |
LL | struct Vtable<'a>(dyn Cap<'a>);
   |              ++++        ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0106`.
